syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.alibaba.cloud.grpc.lib";
option java_outer_classname = "ScaK8sProto";

service SCAk8sProvider {

  rpc providerA (RequestBody) returns (ResponseBody) {}

  rpc providerB (RequestBody) returns (ResponseBody) {}
}

message ResponseBody {

  string message = 1;
}

message RequestBody {

  string consumer = 1;
}
